tests/compiler/downlevelLetConst6/index.ts
// From `github.com/microsoft/TypeScript/blob/v6.0.2/tests/cases/compiler/downlevelLetConst6.ts`, Apache-2.0 License

//@compiler-options: target=es2015
let
//~^ ERROR: Identifier expected. 'let' is a reserved word in strict mode.
//~| ERROR: Cannot find name 'let'.
